structmeta-tests/tests/compile_fail/struct_meta/expected_name_value_but_flag.stderr
error[E0433]: cannot find `attr_name_value` in `structmeta_tests`
 --> tests/compile_fail/struct_meta/expected_name_value_but_flag.rs:1:21
  |
1 | #[structmeta_tests::attr_name_value(value)]
  |                     ^^^^^^^^^^^^^^^ could not find `attr_name_value` in `structmeta_tests`
